# Messager-Elephango

./: .gitignore  CMakeLists.txt  README.md  main.cpp  messenger_db.h
docs/: TechSpec.odt
src/: CMakeLists.txt  main.cpp
src/server/: server.cpp  server.h
